--- a/Library.Api/Library.Api.csproj
+++ b/Library.Api/Library.Api.csproj
@@ -18,6 +18,7 @@
     </PackageReference>
     <PackageReference Include="NLog" Version="4.5.11" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.7.0" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.9" />
   </ItemGroup>
 
   <ItemGroup>
